# Dashify

./: CMakeLists.txt  LICENSE  README.md  about.md  mod.json  support.md
.github/workflows/: multi-platform.yml
resources/: spotidash.access
src/: DataManager.hpp  Spotify.cpp  Spotify.hpp  main.cpp
src/Spotify/: AuthWebserver.cpp  AuthWebserver.hpp  Playback.cpp  Playback.hpp  Spotify.cpp  Spotify.hpp
src/UI/: Playhead.cpp  Playhead.hpp
src/crow_pages/: callback.html
src/lib/: base64.hpp
